[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "prc_package_ishwar6789"
version = "0.0.1"
authors = [
  { name="ishwar", email="ishwar6789@gmail.com" },
]
description = "A small testing package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ishwar6789/prc"
Issues = "https://github.com/ishwar6789/prc/issues"
